# invariance_aware

./: .gitignore  README.md  pyproject.toml  rep_+_elliptical_(2).py  requirements.txt
configs/: envs.yaml  figures.yaml  methods.yaml  optuna.yaml  optuna_online_periodicity.yaml  optuna_online_slippery.yaml  optuna_online_teacup.yaml  optuna_periodicity.yaml  optuna_slippery.yaml  optuna_teacup.yaml  paper.yaml
elliptical_bonus_demo/: README.md  __init__.py  run_demo.py
notebooks/: 01_rep_figures.ipynb  02_bonus_figures.ipynb  03_online_figures.ipynb  04_optuna_periodicity.ipynb  05_optuna_slippery.ipynb  06_optuna_teacup.ipynb  icml_figures.ipynb
periodicity_study/: README.md  bonus_evolution_combo.py  common.py  config.py  metrics.py  plotting.py  ppo.py  replot_coverage.py  representations.py  run_study.py
periodicity_study/notebooks/: periodicity_study_colab.ipynb
periodicity_study/outputs_sweep/summary/: experiment_context.md  stability_success_report.md
periodicity_study/slurm/: bonus_evolution_combo.sbatch  periodicity_study.sbatch  periodicity_study_fast.sbatch
scripts/: cache_datasets.py  optuna_online.py  optuna_search.py  run_all.py  run_figures.py
slurm_logs/: periodicity_study_fast_4239051.out
slurm_logs/archive/cancelled/: 03_online_figures_4026762.err  (+7 more)
slurm_logs/entropy_anneal/: nobonus_periodicity_4044751.out  nobonus_slippery_4044752.out  nobonus_teacup_4044753.out  periodicity_4044748.err  periodicity_4044748.out  slippery_4044749.out  teacup_4044750.err  teacup_4044750.out
src/ti/: __init__.py  utils.py
src/ti/config/: schemas.py  (+1 more)
(+58 files in other folders)
